--- a/app/views/chat/_chat_room.html.haml
+++ b/app/views/chat/_chat_room.html.haml
@@ -4,4 +4,4 @@
       -if history.recive_id.blank? || history.recive_id == current_user.id || history.send_id == current_user.id
         %strong{:style => "color: #{!history.recive_id.blank? ? "red" : "blue"}"} #{history.user.login} #{history.created_at}:
         .text
-          != smiles(history.message.bbcode_to_html({}, false))
+          != sanitize(smiles(history.message.bbcode_to_html({}, false)), sanitize_options)
